cabal-version:      3.4
name:               chroma-parser
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Leonid
maintainer:         104693024+I-Leonid-I@users.noreply.github.com
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Parser
    build-depends:    base >=4.14 && <5
                    , megaparsec >= 8.0 && < 10
    hs-source-dirs:   src
    default-language: Haskell2010

executable chroma-parser
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.14 && <5,
        chroma-parser,
        megaparsec >= 8.0 && < 10
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite chroma-parser-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.14 && <5,
        chroma-parser
